Added context menu to the Audit control and Added powershell script to handle audit context menu requests.

--- a/Cyber Pal/Cyber Pal.csproj
+++ b/Cyber Pal/Cyber Pal.csproj
@@ -37,6 +37,9 @@
     <None Update="Scripts\GetAuditPolAudits.ps1">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
+    <None Update="Scripts\SetAudit.ps1">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
 
 </Project>
